[package]
name = "sd-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
dotenvy = "0.15.7"
log = "0.4.21"
env_logger = "0.11.3"
hostname = "0.4"
if-addrs = "0.12.0"

[dev-dependencies]
mockito = "1.4.0"